--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>Game-Engine</title>
-    <script src="uyv.js"></script>
+    <script src="uyv-o.js"></script>
   </head>
   <body>
-    <script src="index.js"></script>
+    <script src="index-o.js"></script>
   </body>
 </html>
